--- a/style.scss
+++ b/style.scss
@@ -19,6 +19,7 @@ html {
 
 body {
   background: url("http://7xqyb5.com1.z0.glb.clouddn.com/PudongSkyline-pjt.jpg") $white no-repeat bottom;
+  background-size: 100% 16.6%;
   font: 18px/1.4 $helvetica;
   color: $darkGray;
 }
