--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -4,6 +4,18 @@
 <a class="nav-link" href="{{site.baseurl}}/index.html">首页</a>
 </li>
 <li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/study-notes.html">学习笔记</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/problems-reflection.html">问题记录</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/dots-in-life.html">生活点滴</a>
+</li>
+<li class="nav-item">
+    <a class="nav-link" href="{{site.baseurl}}/ideas-and-projects.html">想法项目</a>
+</li>
+<li class="nav-item">
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">关于/作者</a>
 </li>
 <li class="nav-item">
